# Nebula-Stereo-Delay

./: Cargo.toml  README.md
.github/workflows/: build.yml
cmake/auv2-wrapper/: CMakeLists.txt
scripts/: build_linux.sh  build_macos.sh  build_windows.ps1  clean.sh
src/: lib.rs  storage.rs  windows_editor.rs
src/dsp/: mod.rs
src/gui/: mod.rs
src/midi/: mod.rs
src/parameters/: mod.rs
src/preset/: mod.rs
src/state/: mod.rs
tests/: audio_evaluation_tests.rs  perceptual_tests.rs  technical_tests.rs
xtask/: Cargo.toml
xtask/src/: main.rs
