[workspace]
resolver = "2"
members = [
    "xtask",
]

[package]
name = "nebula-stereo-delay"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Nebula Stereo Delay — Professional stereo delay audio plugin by Nebula Audio"
authors = ["Nebula Audio"]
rust-version = "1.77.0"

[lib]
name = "nebula_stereo_delay"
crate-type = ["cdylib", "lib"]

[features]
default = ["plugin"]
plugin = ["dep:nih_plug", "dep:nih_plug_egui", "dep:atomic_float", "dep:crossbeam", "dep:rustc-hash", "dep:serde", "dep:serde_json"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"], optional = true }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", optional = true }
atomic_float = { version = "1", optional = true }
crossbeam = { version = "0.8", optional = true }
rustc-hash = { version = "2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
approx = "0.5"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3

[profile.debug-opt]
inherits = "release"
lto = "thin"
codegen-units = 4
opt-level = 2
