[workspace]
resolver = "2"
members = [
    "xtask",
]

[package]
name = "nebula-stereo-delay"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Nebula Stereo Delay — Professional stereo delay audio plugin by Nebula Audio"
authors = ["Nebula Audio"]
rust-version = "1.77.0"

[lib]
name = "nebula_stereo_delay"
crate-type = ["cdylib", "lib"]

[features]
default = ["plugin", "gui"]
plugin = [
    "dep:nih_plug",
    "dep:atomic_float",
    "dep:crossbeam",
    "dep:rustc-hash",
    "dep:serde",
    "dep:serde_json",
]
gui = [
    "dep:nih_plug_egui",
    "dep:windows",
    "dep:windows-numerics",
]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", optional = true }
atomic_float = { version = "1", optional = true }
crossbeam = { version = "0.8", optional = true }
rustc-hash = { version = "2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", optional = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
windows-numerics = { version = "0.3.1", optional = true }

[dev-dependencies]
approx = "0.5"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3

[profile.debug-opt]
inherits = "release"
lto = "thin"
codegen-units = 4
opt-level = 2
